<resources>
    <string name="app_name">WeatherViewer</string>
    <string name="action_settings">Settings</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="weather_condition_image">A graphical representation of the weather conditions</string>
    <string name="temp">Temperature: %s</string>
    <string name="desc">Description: %s</string>
    <string name="day_description">%1$s</string>
    <string name="humidity">Humidity: %s</string>

    <string name="hint_text">Enter city (e.g, Boston, MA, US)</string>
    <string name="read_error">Unable to read weather data</string>
    <string name="connect_error">Unable to connect to OpenWeatherMap.org</string>
    <string name="title_activity_add_city">Cites</string>
    <string name="explanation">if you reject this permission geolocaton function will be no longer available</string>

    <string name="geodata_apsent">Device can\'t get your geodata</string>
    <string name="no_connection">No internet connection</string>
    <string name="week_weather">http://api.openweathermap.org/data/2.5/forecast?%1$s&amp;lang=en&amp;APPID=d6047dbee20272bf3ddcda9e024274cc</string>
    <string name="one_day_weather">http://api.openweathermap.org/data/2.5/weather?%1$s&amp;lang=en&amp;APPID=d6047dbee20272bf3ddcda9e024274cc</string>
    <string name="cites_list_weather">http://api.openweathermap.org/data/2.5/group?id=%1$s&amp;lang=en&amp;APPID=d6047dbee20272bf3ddcda9e024274cc</string>
    <string name="week_weather_by_city_name">http://api.openweathermap.org/data/2.5/forecast?q=%1$s&amp;lang=en&amp;APPID=d6047dbee20272bf3ddcda9e024274cc</string>
    <string name="one_day_weather_by_city_name">http://api.openweathermap.org/data/2.5/weather?q=%1$s&amp;lang=en&amp;APPID=d6047dbee20272bf3ddcda9e024274cc</string>

    <string name="need_city">You need choose some city</string>
    <string name="attention">Attention!</string>
    <string name="database_explanation">The application database can store no more than 10 cities</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity_res">Humidity:</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="sunrise">Sunrise:</string>
    <string name="sunset">Sunset:</string>
    <string name="update">update</string>
    <string name="not_add_in_database_explanation">The coordinates of %1$s and %2$s are almost the same, the settlement will not be added to the database</string>

    <string name="lang">en</string>
    <string name="database_explanetion">In case of errors on the server or the absence of the Internet, weather data obtained during the previous application launch is downloaded from the device’s local storage</string>
    <string name="day_data_absent">The day\'s data is taken from memory, for details -> OK</string>
    <string name="week_data_absent">Weekly data is taken from memory, for details -> OK</string>
    <string name="cities_list_absent">Data is taken from memory, check internet availability</string>


    <string name="one_day_error">An error occurred while accessing the server, the weather data for the day was not downloaded</string>
    <string name="week_error">An error occurred while accessing the server, the weather data for the week was not downloaded</string>
    <string name="cities_error">An error occurred while accessing the server, the weather data in the list of your cities were not uploaded</string>
    <string name="time_zone_exception">An error occurred while accessing the server, the data was not received, please try again later</string>
    <string name="interval">Interval</string>
    <string name="auto">Automatically</string>
    <string name="sync_summary">update according to the selected time interval</string>
    <string name="sync">Synchronization</string>
    <string name="channel_name">my_channel_02</string>
    <string name="cities">Cities list</string>
    <string name="geo">Geolocation</string>
    <string name="geo_summary">Enable geolocation</string>
    <string name="notification">Notifications</string>
    <string name="notification_summary">Weather notifications in the current geolocation in accordance with the selected interval, if geolocation is available</string>
    <string name="sync_settings">Sync settings</string>
    <string name="geo_switch_explanetion">Granted permissions can be revoked in device settings</string>
</resources>
